<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/product" />

            <LinearLayout
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    style="@style/name_text_view_style"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_view_style"
                android:text="@string/supplier" />

            <LinearLayout
                android:layout_width="@dimen/layout_width"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/supplier_name"
                    style="@style/name_text_view_style"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/supplier_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/supplier_phone_number"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/button_style"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>